# vidrecs-ml

./: .gitignore  README.md
DataServer/database/: Cargo.toml
DataServer/database/resources/: fillup_keywords.toml
DataServer/database/src/: api.rs  lib.rs  models.rs  pg.rs  requests.rs
DataServer/server/: Cargo.toml
DataServer/server/resources/: config.toml
DataServer/server/src/: main.rs
FetchServer/resources/: GinConfig.toml
FetchServer/src/: go.mod  go.sum  main.go
FetchServer/src/Fetcher/: Message.go  go.mod
FetchServer/src/Scrapper/: go.mod
FetchServer/src/Utils/: File.go  go.mod
RecommendationServer/: pyproject.toml  run.sh
RecommendationServer/resource/cfg/: config.json  queries.toml  requirements.txt
RecommendationServer/src/: main.py  run.sh
RecommendationServer/src/models/: abstract.py
RecommendationServer/src/models/funksvd/: model.py
RecommendationServer/src/utils/config/: argument_parsing.py  json_parsing.py  pickle_parsing.py
RecommendationServer/src/utils/enums/: model_actions.py
RecommendationServer/src/utils/logging/: log.py
WebApp/: Program.cs  WebApp.csproj
WebApp/Controllers/: HomeController.cs
WebApp/Interfaces/: IDeserialization.cs  IHttpReader.cs  IResponseController.cs  ISerialization.cs  IServiceManager.cs
WebApp/Models/Api/: VideoService.cs
WebApp/Models/Forms/: Forms.cs
WebApp/Models/Requests/: ApiMessage.cs  LoginRequest.cs  RegisterRequest.cs  VideoRequest.cs
WebApp/Models/Responses/: GameFetchResponse.cs  LoginResponse.cs  RegisterResponse.cs  Response.cs
WebApp/Properties/: launchSettings.json
frontend/: index.html
frontend/assets/: config.json
frontend/css/: style.css
frontend/js/: script.js
python/: '  2  \  run.sh
python/db/: Database.py
python/resource/: config.json
python/src/: main.py
python/src/db/: Database.py
(+12 files in other folders)
