[project]
name = "vidrecs-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MiT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torchvision (>=0.21.0,<0.22.0)",
    "torch (>=2.6.0,<3.0.0)",
    "psycopg (>=3.2.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
