[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.43", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
database = { path = "../database" }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
